Improve swagger docs and generate rest of models
