# src/api/endpoint/models/device_query.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class DeviceQuery(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, device_id: int=None, agent: Agent=None):  # noqa: E501
+        """DeviceQuery - a model defined in Swagger
+
+        :param device_id: The device_id of this DeviceQuery.  # noqa: E501
+        :type device_id: int
+        :param agent: The agent of this DeviceQuery.  # noqa: E501
+        :type agent: Agent
+        """
+        self.swagger_types = {
+            'device_id': int,
+            'agent': Agent
+        }
+
+        self.attribute_map = {
+            'device_id': 'device_id',
+            'agent': 'agent'
+        }
+
+        self._device_id = device_id
+        self._agent = agent
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DeviceQuery':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DeviceQuery of this DeviceQuery.  # noqa: E501
+        :rtype: DeviceQuery
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def device_id(self) -> int:
+        """Gets the device_id of this DeviceQuery.
+
+
+        :return: The device_id of this DeviceQuery.
+        :rtype: int
+        """
+        return self._device_id
+
+    @device_id.setter
+    def device_id(self, device_id: int):
+        """Sets the device_id of this DeviceQuery.
+
+
+        :param device_id: The device_id of this DeviceQuery.
+        :type device_id: int
+        """
+
+        self._device_id = device_id
+
+    @property
+    def agent(self) -> Agent:
+        """Gets the agent of this DeviceQuery.
+
+
+        :return: The agent of this DeviceQuery.
+        :rtype: Agent
+        """
+        return self._agent
+
+    @agent.setter
+    def agent(self, agent: Agent):
+        """Sets the agent of this DeviceQuery.
+
+
+        :param agent: The agent of this DeviceQuery.
+        :type agent: Agent
+        """
+
+        self._agent = agent
