# src/api/endpoint/models/device_state.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class DeviceState(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, state_value: int=None):  # noqa: E501
+        """DeviceState - a model defined in Swagger
+
+        :param state_value: The state_value of this DeviceState.  # noqa: E501
+        :type state_value: int
+        """
+        self.swagger_types = {
+            'state_value': int
+        }
+
+        self.attribute_map = {
+            'state_value': 'state_value'
+        }
+
+        self._state_value = state_value
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DeviceState':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DeviceState of this DeviceState.  # noqa: E501
+        :rtype: DeviceState
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def state_value(self) -> int:
+        """Gets the state_value of this DeviceState.
+
+
+        :return: The state_value of this DeviceState.
+        :rtype: int
+        """
+        return self._state_value
+
+    @state_value.setter
+    def state_value(self, state_value: int):
+        """Sets the state_value of this DeviceState.
+
+
+        :param state_value: The state_value of this DeviceState.
+        :type state_value: int
+        """
+
+        self._state_value = state_value
